# easy-infer-station

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  config.py  index.html  package-lock.json  package.json  requirements.txt  run_tauri_dev.bat
.github/workflows/: ci.yml  release.yml  sync-r2.yml
routes/: __init__.py  main_routes.py
services/: __init__.py  inference_service.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backend.rs
src/components/EnvManager/: index.tsx
src/lib/: socket.ts  store.ts  tauri-bridge.ts
src/pages/: MainPage.tsx  SetupWizard.tsx
